Added -- more Either methods and examples

--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "dependencies": {
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "@types/node": "^13.9.2"
   }
 }
